--- a/src/Frontend/css/addmany.css
+++ b/src/Frontend/css/addmany.css
@@ -11,7 +11,7 @@
   width: 100%;
   height: auto;
   margin-bottom: 15px;
-  padding-left: 10px;
+  padding: 10px 50px 10px 10px;
   line-height: 27px;
   overflow: hidden;
 }
@@ -31,7 +31,9 @@
   color: #FFF;
 }
 .btn-addmany-delete {
-  float: right;
+  position: absolute;
+  right: 8px;
+  top: 8px;
 }
 .addmany ~ b {
   line-height: 40px;
