--- a/src/Frontend/css/addmany.css
+++ b/src/Frontend/css/addmany.css
@@ -24,6 +24,13 @@
   height: auto;
   overflow-y: scroll;
 }
+.addmany-actual-values.sorting-results > li {
+  border: rgba(166, 166, 173, 0.61) dashed 2px;
+}
+.addmany-actual-values.sorting-results input,
+.addmany-actual-values.sorting-results textarea {
+  opacity: 0.3;
+}
 .addmany-actual-values .addmany-result.postbox {
   background-color: #F9F7F7;
   -webkit-transition: background-color 500ms ease 1s;
